# PythonLabs

./: .gitignore  EventCalendar.yaml  app.py  db-test.py.ipynb  pyproject.toml
alembic/: alembic.ini  generate_all.py
alembic/versions/: 9e0cf9b0ac21_added_all_tables.py
api/: Auth.py  Event_API.py  User_API.py  app.py  lab4.py
back-end/: db-test.py.ipynb  pyproject.toml
back-end/alembic/: alembic.ini  generate_all.py
back-end/api/: Auth.py  Event_API.py  User_API.py
back-end/tests/: unit_tests.py
backend/: .gitignore  EventCalendar.yaml  README.md  app.py  db.sql  getInfo.cmd
backend/alembic/: env.py
backend/api/: Auth.py  Event_API.py  User_API.py
backend/errors/: auth_errors.py
backend/models/: models.py
backend/tests/: functional_tests.py  unit_tests.py
front-end/: 400ErrorPage.html  404ErrorPage.html  CreatedEventsPage.html  EditEventPage.html  EditProfilePage.html  EventInfoPage.html  LoginPage.html  MainPage.html  ProfilePage.html  RegistrationPage.html  index.html  package-lock.json  package.json
front-end/AJAX/: eventInfo.js  events.js  login.js  navbar.js  profilePage.js  registration.js
front-end/Styles/: AuthenticationPages.css  AuthenticationPages.css.map  AuthenticationPages.scss  Buttons.css  Buttons.css.map  Buttons.scss  Colors.scss  CreatedEventsPage.css  CreatedEventsPage.css.map  CreatedEventsPage.scss  EditEventPage.css  EditEventPage.css.map  EditEventPage.scss  EditProfilePage.css  (+27 more)
models/: models.py
react-front/: package-lock.json  package.json
services/: config.py
tests/: functional_tests.py  unit_tests.py
(+104 files in other folders)
