[tool.poetry]
name = "pythonlabs"
version = "0.1.0"
description = ""
authors = ["Defoleur <86654777+Defoleur@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
waitress = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
