[tool.poetry]
name = "pythonlabs"
version = "0.1.0"
description = ""
authors = ["Defoleur <86654777+Defoleur@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
waitress = "^2.1.2"
SQLAlchemy = "^1.4.42"
jupyter = "^1.0.0"
psycopg2 = "^2.9.5"
alembic = "1.8.1"
bcrypt = "^4.0.1"
flask-httpauth = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
